# pipen-cli-gbatch

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
pipen_cli_gbatch/: __init__.py  daemon_args.toml
tests/: conftest.py  test_cli_gbatch_daemon.py  test_mock_gcloud.py
tests/mock/: README.md  gcloud  mocks.py
