[project]
name = "pipen-cli-gbatch"
dynamic = ["version"]
description = "A pipen cli plugin to run command via Google Cloud Batch"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
   "pipen>=1.1.13,<2",
   "pipen-poplog>=1.1,<2",
   "pipen-args>=1.2,<2",
   "panpath[async-gs]>=0.4.9,<0.5",
]

[tool.hatch.version]
path = "pipen_cli_gbatch/__init__.py"

[project.urls]
Homepage = "https://github.com/pwwang/pipen-cli-gbatch"
Repository = "https://github.com/pwwang/pipen-cli-gbatch"

[project.entry-points."pipen_cli"]
cli-gbatch = "pipen_cli_gbatch:CliGbatchPlugin"

[dependency-groups]
dev = [
   "pytest>=8.4.1,<9",
   "pytest-cov>=6.2.1,<7",
   "pytest-asyncio>=1.1.0,<2",
   "pytest-xdist>=3.8.0,<4",
   "pytest-forked>=1.6.0,<2",
   "backports-asyncio-runner>=1.1.0,<2; python_version < '3.11'",
]

[tool.pytest.ini_options]
addopts = "-vv -n auto --dist loadgroup -p no:benchmark -W error::UserWarning --cov-config=.coveragerc --cov=pipen_cli_gbatch --cov-report xml:.coverage.xml --cov-report term-missing"
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"
filterwarnings = [
   "ignore:.+may lead to deadlocks in the child:DeprecationWarning",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pipen_cli_gbatch*"]

[tool.setuptools.package-data]
pipen_cli_gbatch = ["daemon_args.toml"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
